# setup-vulkan-sdk

./: CMakeLists.txt  LICENSE  README.md  action.yml  action_helpers.sh  install_vulkan_sdk.sh
.github/workflows/: ci.yml  ubuntu-arm.yml
cmake/: json_utils.cmake
cmake/glslang/: CMakeLists.txt
cmake/spirv-tools/: CMakeLists.txt
msvc-env/: action.yml  msvc_helpers.sh
prereqs/: linux.sh  ubuntu.sh  windows-2021.sh
setup-vulkan-prebuilt-sdk/: action.yml  vulkan_prebuilt_helpers.sh
tests/: CMakeLists.txt  test_vulkan.c
tests/vulkan_sdk_specs/: linux.json
